# people_scheduler

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
api/: .env.example  Cargo.toml
api/src/: auth.rs  lambda.rs  lib.rs  main.rs
api/src/db/: mod.rs
api/src/models/: mod.rs
api/src/routes/: jobs.rs  mod.rs  people.rs  reports.rs  schedules.rs  sibling_groups.rs  unavailability.rs
migrations/: 001_initial_schema.sql  002_job_positions.sql
migrations-postgres/: 001_initial_schema.sql  002_add_users.sql  003_link_users_to_people.sql  005_add_monaguillos_jr.sql  006_nullable_person_id.sql  007_exclude_from_jobs.sql  008_add_photo.sql  009_add_servidor_fields.sql
scripts/: .env.example  create_test_data.sql  create_test_users.sql  deploy.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  jobs.rs  mod.rs  people.rs  schedule.rs  sibling.rs  test_data.rs  unavailability.rs
src-tauri/src/db/: connection.rs
src-tauri/src/export/: excel.rs  mod.rs
src-tauri/src/models/: job.rs  mod.rs  person.rs  schedule.rs  sibling.rs  unavailability.rs
src-tauri/src/scheduler/: algorithm.rs  constraints.rs  mod.rs
src/components/common/: Avatar.tsx  Button.tsx  ImageCropModal.tsx  Input.tsx  Modal.tsx  PhotoUpload.tsx  Sidebar.tsx  Table.tsx  index.ts
src/components/people/: PersonDetailModal.tsx  PersonForm.tsx  PersonList.tsx  index.ts
src/components/reports/: FairnessReport.tsx  PersonHistoryModal.tsx  index.ts
src/pages/: Dashboard.tsx  Login.tsx  PeopleManagement.tsx  Reports.tsx  ScheduleView.tsx  ServidorDashboard.tsx  Settings.tsx  SiblingGroups.tsx  UnavailabilityManagement.tsx  index.ts
src/services/: api.ts
src/stores/: authStore.ts  jobsStore.ts  peopleStore.ts  scheduleStore.ts  unavailabilityStore.ts
src/types/: index.ts
test_data/: voluntarios.csv
(+7 files in other folders)
