[package]
name = "people-scheduler-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AWS Lambda
lambda_http = "0.14"
lambda_runtime = "0.14"

# Environment variables
dotenvy = "0.15"

[features]
default = []
lambda = []

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
