[package]
name = "people_scheduler"
version = "0.1.0"
description = "A church volunteer scheduling application"
authors = ["chzelada"]
edition = "2021"

[lib]
name = "people_scheduler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.0", features = ["bundled"] }
xlsxwriter = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"

[profile.release]
lto = true
opt-level = "s"
strip = true
